@@ -129,24 +129,24 @@
         <a id="logoLink" href="start.html"><img id="logo" src="sflix_sys/sflixLogo.png" alt="STEFFLIX Logo"></a>
         <ul id="menu" class="menu"></ul>
         <form action="javascript:callSearch()">
-            <a href="javascript:void(0);" id="searchTextField" style="display: block;" onclick="toggleContainer(['searchFieldContainer'], 'flex')"></a>
+            <a id="searchTextField" style="display: block;" onclick="toggleContainer(['searchFieldContainer'], 'flex')"></a>
             <div id="searchFieldContainer" style="display: none; position: absolute; z-index: 999;">
                 <input id="searchField" type="text" name="searchTerm" placeholder="Suche">
-                <a href="javascript:void(0);" onclick="callSearch()" id="doSearchIcon">✔</a>
-                <a href="javascript:void(0);" onclick="toggleContainer(['searchFieldContainer'], 'none')" id="closeSearchIcon">❌</a>
+                <a onclick="callSearch()" id="doSearchIcon">✔</a>
+                <a onclick="toggleContainer(['searchFieldContainer'], 'none')" id="closeSearchIcon">❌</a>
             </div>
         </form>
         <div id="settings">
             <div id="settingsDD">
-                <a href="javascript:void(0);" id="settingsBoxToggler" onclick="toggleContainer(['settingsBox'], 'flex')"><table><tr><td id="autoplayIcon" style="width: 40px;"></td><td>Autoplay</td></tr></table></a>
-                <a href="javascript:void(0);" id="feedbackBoxToggler" onclick="toggleContainer(['feedbackWrapper'], 'flex')"><table><tr><td id="supportIcon" style="width: 40px;"></td><td>Feedback</td></tr></table></a>
-                <a href="javascript:void(0);" id="FehlerbehebungToggler" onclick="toggleContainer(['fehlerbehebung'], 'block')"><table><tr><td id="fehlerIcon" style="width: 40px;"></td><td>Fehlerbehebung</td></tr></table></a>
-                <a href="javascript:void(0);" id="serialToggler" onclick="toggleContainer(['serialKeyWrapper'], 'flex')"><table><tr><td id="lizenzIcon" style="width: 40px;"></td><td>Lizenz</td></tr></table></a>
-                <a href="javascript:void(0);" id="serialToggler" onclick="openHelp()"><table><tr><td id="helpIcon" style="width: 40px;"></td><td>Hilfe</td></tr></table></a>
+                <a id="settingsBoxToggler" onclick="toggleContainer(['settingsBox'], 'flex')"><table><tr><td id="autoplayIcon" style="width: 40px;"></td><td>Autoplay</td></tr></table></a>
+                <a id="feedbackBoxToggler" onclick="toggleContainer(['feedbackWrapper'], 'flex')"><table><tr><td id="supportIcon" style="width: 40px;"></td><td>Feedback</td></tr></table></a>
+                <a id="FehlerbehebungToggler" onclick="toggleContainer(['fehlerbehebung'], 'block')"><table><tr><td id="fehlerIcon" style="width: 40px;"></td><td>Fehlerbehebung</td></tr></table></a>
+                <a id="serialToggler" onclick="toggleContainer(['serialKeyWrapper'], 'flex')"><table><tr><td id="lizenzIcon" style="width: 40px;"></td><td>Lizenz</td></tr></table></a>
+                <a id="serialToggler" onclick="openHelp()"><table><tr><td id="helpIcon" style="width: 40px;"></td><td>Hilfe</td></tr></table></a>
             </div>
         </div>
         <div id="settingsBox" style="display: none;">
-            <div><a class="closeButton" href="javascript:void(0);" onclick="toggleContainer(['settingsBox'], 'none')">❌</a></div>
+            <div><a class="closeButton" onclick="toggleContainer(['settingsBox'], 'none')">❌</a></div>
             <p><b>Autoplay</b>: <input type="checkbox" onclick="checkAutoplayAmout()" id="autoplayCheckBox"></p>
             <p><b>Anzahl autoplay</b>: <input type="number" id="amountOfAutoplay" value="0"></p>
             <p><b>Dauer bis Übergang</b>: <input type="number" id="autoplayDuration" value="30"></p>
@@ -155,43 +155,43 @@
         <div id="fehlerbehebung" style="display:none">
             <div style="display: flex; flex-direction: row;">
                 <div><p style="border: none;"><b>Achtung!</b> Hier ausgeführte Aktionen können nicht rückgängig gemacht werden!</p></div>
-                <div><a class="closeButton" href="javascript:void(0);" onclick="toggleContainer(['fehlerbehebung'], 'none')">❌</a></div>
+                <div><a class="closeButton" onclick="toggleContainer(['fehlerbehebung'], 'none')">❌</a></div>
             </div>
             <h5>Favoriten löschen</h5>
             <p>Sollte das Menü nicht richtig geladen und Medieninhalte nicht angezeigt werden, kann es helfen, die gesetzten Favoriten zu löschen.<br><br>
-            <a href="javascript:void(0);" onclick="modifyLocalData('favorites')" class="button">Favoriten löschen</a></p>
+            <a onclick="modifyLocalData('favorites')" class="button">Favoriten löschen</a></p>
             <h5>Playlisten löschen</h5>
             <p>Sollten die verlinkungen der Vor- und Zurückbuttons fehlerhaft sein, kann dies durch das Löschen der Playlisten behoben werden.<br><br>
-            <a href="javascript:void(0);" onclick="modifyLocalData('playlist')" class="button">Playlisten löschen</a></p>
+            <a onclick="modifyLocalData('playlist')" class="button">Playlisten löschen</a></p>
             <h5>Zeitstempel löschen</h5>
             <p>Sollten die Zeitstempel fehlerhaft sein oder das Laden der Videos nicht funktionieren, kann es helfen, die Zeitstempel zu löschen.<br><br>
-            <a href="javascript:void(0);" onclick="modifyLocalData('timestamp')" class="button">Zeitstempel löschen</a></p>
+            <a onclick="modifyLocalData('timestamp')" class="button">Zeitstempel löschen</a></p>
             <h5>Zuletzt gesehen Liste löschen</h5>
             <p>Sollte die Startseite von STEFFLIX nicht richtig geladen werden, oder die Liste fehlerhaft sein, kann es helfen, die Liste zu löschen.<br><br>
-            <a href="javascript:void(0);" onclick="modifyLocalData('playlast')" class="button">Zuletzt gespielt löschen</a></p>
+            <a onclick="modifyLocalData('playlast')" class="button">Zuletzt gespielt löschen</a></p>
             <h5>Alle Daten löschen</h5>
             <p>Nur ausführen, wenn keine andere Massnahme geholfen hat.<br><br>
-            <a href="javascript:void(0);" onclick="modifyLocalData('all')" class="button">Alles löschen</a></p>
+            <a onclick="modifyLocalData('all')" class="button">Alles löschen</a></p>
             <div id="debugOutput" style="display: none;">
                 <h5>Fortschritt</h5>
                 <textarea style="width: 100%;" id="debugField" rows="10" disabled></textarea>
-                <a href="javascript:void(0);" id="debugOkButton" style="display: none;" onclick="toggleContainer(['debugOutput'], 'none')" class="button">OK</a>
+                <a id="debugOkButton" style="display: none;" onclick="toggleContainer(['debugOutput'], 'none')" class="button">OK</a>
             </div>
         </div>
         <div id="feedbackWrapper" style="display: none;">
             <form>
                 <div>
-                    <a class="closeButton" href="javascript:void(0);" onclick="toggleContainer(['feedbackWrapper'], 'none')">❌</a>
+                    <a class="closeButton" onclick="toggleContainer(['feedbackWrapper'], 'none')">❌</a>
                     <h2>Feedback und Bugreport</h2>
                     <input type="text" id="feedbackName" placeholder="Name" required>
                     <textarea id="feedbackText" placeholder="Nachricht" value="" autocomplete="off" required></textarea>
                 </div>
                 <span id="errorMsg"></span>
-                <a class="button" href="javascript:void(0)" onclick="sendMessage()">Senden</a>
+                <a class="button"onclick="sendMessage()">Senden</a>
             </form>
         </div>
         <div id="serialKeyWrapper" style="display: none;">
-            <a class="closeButton" href="javascript:void(0);" onclick="toggleContainer(['serialKeyWrapper'], 'none')">❌</a>
+            <a class="closeButton" onclick="toggleContainer(['serialKeyWrapper'], 'none')">❌</a>
             <h2>Lizenzschlüssel</h2>
             <p>Der Lizenzschlüssel wird benötigt, damit das Feedbackformular verwendet werden kann.</p>
             <form id="licenseInputs">
@@ -219,12 +219,12 @@
     </div>
     <!-- Mediencontainer -->
     <div id="media" style="display: none;">
-        <a class="closeButton" id="toggleFullscreenButton" href="javascript:void(0);" style="display: none;" onclick="toggleFullscreenMode()">❌</a>
+        <a class="closeButton" id="toggleFullscreenButton" style="display: none;" onclick="toggleFullscreenMode()">❌</a>
         <div id="help" style="display: none;">
             <h3>Neue Medieninhalte hinzufügen</h3>
             <p>Um neue Medieninhalte hinzuzufügen, müssen diese einfach in den entsprechenden STEFFLIX-Ordner kopiert werden und anschliessend das Programm <span class="highlighted">updateData.exe</span> ausgeführt werden.</p>
             <ol>
-                <li>Gewünschte <a href="javascript:void(0);" onclick="toggleContainer(['addNewMediaInfoTitle', 'addNewMediaInfo'], 'block')">Medien</a> in passenden Unterordner von STEFFLIX kopieren<br><br>
+                <li>Gewünschte <a onclick="toggleContainer(['addNewMediaInfoTitle', 'addNewMediaInfo'], 'block')">Medien</a> in passenden Unterordner von STEFFLIX kopieren<br><br>
                 <h4 id="addNewMediaInfoTitle" style="text-align: left;display: none;">Unterstützte Dateiformate:</h4>
                 <ul id="addNewMediaInfo" style="display: none; text-align: left; margin-left: 30px; margin-bottom: 20px;">
                     <li>Video: mp4</li>
@@ -232,12 +232,12 @@
                     <li>Bilder: jpg, png, gif</li>
                     <p><br>Anleitung zur <a href="https://praxistipps.chip.de/mit-vlc-dateien-umwandeln-so-gehts_35221">Konvertierung von Videos mit VLC</a></p>
                 </ul></li>
-                <li>Optional: Preview-Bild in <a href="javascript:void(0);" style="cursor: pointer;" onclick="toggleContainer(['folderExplain'], 'block')">Preview-Ordner</a> hinterlegen. Muss jpg-Format aufweisen und der Dateiname muss identisch sein wie das Zielmedium. <span id="folderExplain" style="display: none;"><b>(Der Preview-Ordner muss sich im selben Verzeichnis befinden wie das Medium)</b>:<br><br> D:\sflix\BILDER<br>├───Buddy<br>├───Pilze<br>├───Natur<br>└───<span style='color: red'>Preview</span><br><span style='margin-left: 45px;'>└───Buddy.jpg</span><br><span style='margin-left: 45px;'>└───Natur.jpg</span><br><span style='margin-left: 45px;'>└───Pilze.jpg</span><br></span><br><br></li>
+                <li>Optional: Preview-Bild in <a style="cursor: pointer;" onclick="toggleContainer(['folderExplain'], 'block')">Preview-Ordner</a> hinterlegen. Muss jpg-Format aufweisen und der Dateiname muss identisch sein wie das Zielmedium. <span id="folderExplain" style="display: none;"><b>(Der Preview-Ordner muss sich im selben Verzeichnis befinden wie das Medium)</b>:<br><br> D:\sflix\BILDER<br>├───Buddy<br>├───Pilze<br>├───Natur<br>└───<span style='color: red'>Preview</span><br><span style='margin-left: 45px;'>└───Buddy.jpg</span><br><span style='margin-left: 45px;'>└───Natur.jpg</span><br><span style='margin-left: 45px;'>└───Pilze.jpg</span><br></span><br><br></li>
                 <li>updateData.exe ausführen</li>
             </ol>
 
             <h3>Autoplayfunktion</h3>
-            <p>Damit die Autoplayfunktion genutzt werden kann, muss in den <a href="javascript:void(0);" onclick="toggleContainer(['settingsBox'], 'flex')">Optionen</a> sowohl der Haken bei Autoplay gesetzt werden als auch eine Anzahl der zu spielenden Medien angeben. <a href="javascript:void(0);" onclick="toggleContainer(['optionHelp'], 'block')">Informationen</a><br></p>
+            <p>Damit die Autoplayfunktion genutzt werden kann, muss in den <a onclick="toggleContainer(['settingsBox'], 'flex')">Optionen</a> sowohl der Haken bei Autoplay gesetzt werden als auch eine Anzahl der zu spielenden Medien angeben. <a onclick="toggleContainer(['optionHelp'], 'block')">Informationen</a><br></p>
             <div id="optionHelp" style="display: none;">
                 <br>
                 <ul>
